[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
CreateApp = []
CreateIndividualStreamJob = []
CreateMixJob = []
CreateRecordRule = []
DeleteApp = []
DeleteRecordRule = []
ListApps = []
ListObsBucketObjects = []
ListObsBuckets = []
ListRecordRules = []
ListRtcAbnormalEvent = []
ListRtcAbnormalEventDimension = []
ListRtcAbnormalEvents = []
ListRtcClientQosDetails = []
ListRtcEvent = []
ListRtcHistoryQuality = []
ListRtcHistoryScale = []
ListRtcHistoryUsage = []
ListRtcRealtimeNetwork = []
ListRtcRealtimeQuality = []
ListRtcRealtimeScale = []
ListRtcRealtimeScaleDimension = []
ListRtcRoomList = []
ListRtcUserList = []
RemoveRoom = []
RemoveUsers = []
ShowApp = []
ShowAutoRecord = []
ShowIndividualStreamJob = []
ShowMixJob = []
ShowRecordCallback = []
ShowRecordRule = []
StartApp = []
StopApp = []
StopIndividualStreamJob = []
StopMixJob = []
UpdateAutoRecord = []
UpdateIndividualStreamJob = []
UpdateMixJob = []
UpdateObsBucketAuthority = []
UpdateRecordCallback = []
UpdateRecordRule = []
full = ["CreateApp", "CreateIndividualStreamJob", "CreateMixJob", "CreateRecordRule", "DeleteApp", "DeleteRecordRule", "ListApps", "ListObsBucketObjects", "ListObsBuckets", "ListRecordRules", "ListRtcAbnormalEvent", "ListRtcAbnormalEventDimension", "ListRtcAbnormalEvents", "ListRtcClientQosDetails", "ListRtcEvent", "ListRtcHistoryQuality", "ListRtcHistoryScale", "ListRtcHistoryUsage", "ListRtcRealtimeNetwork", "ListRtcRealtimeQuality", "ListRtcRealtimeScale", "ListRtcRealtimeScaleDimension", "ListRtcRoomList", "ListRtcUserList", "RemoveRoom", "RemoveUsers", "ShowApp", "ShowAutoRecord", "ShowIndividualStreamJob", "ShowMixJob", "ShowRecordCallback", "ShowRecordRule", "StartApp", "StopApp", "StopIndividualStreamJob", "StopMixJob", "UpdateAutoRecord", "UpdateIndividualStreamJob", "UpdateMixJob", "UpdateObsBucketAuthority", "UpdateRecordCallback", "UpdateRecordRule"]

[lib]
name = "huawei_cloud_api_definitions_CloudRTC"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CloudRTC"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "0.1.1"
