[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
BatchDeleteTestCase = []
CreateApiTestSuiteByRepoFile = []
CreatePlan = []
CreateService = []
CreateTestCase = []
CreateTestCaseInPlan = []
DeleteService = []
ListBranches = []
ListEnvironments = []
ListTestCaseHistories = []
ListTestCases = []
RunTestCase = []
ShowApiTestcaseHistories = []
ShowIssuesByPlanId = []
ShowPlanJournals = []
ShowPlanList = []
ShowPlans = []
ShowProjectDataDashboard = []
ShowRegisterService = []
ShowReport = []
ShowTestCaseAndDefectInfo = []
ShowTestCaseDetail = []
ShowTestCaseDetailV2 = []
ShowUserExecuteTestCaseInfo = []
UpdateService = []
UpdateTestCase = []
UpdateTestCaseResult = []
full = ["BatchDeleteTestCase", "CreateApiTestSuiteByRepoFile", "CreatePlan", "CreateService", "CreateTestCase", "CreateTestCaseInPlan", "DeleteService", "ListBranches", "ListEnvironments", "ListTestCaseHistories", "ListTestCases", "RunTestCase", "ShowApiTestcaseHistories", "ShowIssuesByPlanId", "ShowPlanJournals", "ShowPlanList", "ShowPlans", "ShowProjectDataDashboard", "ShowRegisterService", "ShowReport", "ShowTestCaseAndDefectInfo", "ShowTestCaseDetail", "ShowTestCaseDetailV2", "ShowUserExecuteTestCaseInfo", "UpdateService", "UpdateTestCase", "UpdateTestCaseResult"]

[lib]
name = "huawei_cloud_api_definitions_CloudTest"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CloudTest"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "0.1.0"
