[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
CreateBuildJob = []
CreateTemplates = []
DeleteBuildJob = []
DeleteTemplates = []
DisableBuildJob = []
DisableNotice = []
DownloadBuildLog = []
DownloadKeystore = []
DownloadLogByRecordId = []
DownloadTaskLog = []
EnableBuildJob = []
ListJobConfig = []
ListNotice = []
ListTemplates = []
RunJob = []
ShowFlowGraph = []
ShowHistoryDetails = []
ShowJobListByProjectId = []
ShowJobStatus = []
ShowJobSuccessRatio = []
ShowLastHistory = []
ShowListHistory = []
ShowListPeriodHistory = []
ShowOutputInfo = []
ShowRecordDetail = []
ShowRecordInfo = []
StopBuildJob = []
StopJob = []
UpdateBuildJob = []
UpdateNotice = []
full = ["CreateBuildJob", "CreateTemplates", "DeleteBuildJob", "DeleteTemplates", "DisableBuildJob", "DisableNotice", "DownloadBuildLog", "DownloadKeystore", "DownloadLogByRecordId", "DownloadTaskLog", "EnableBuildJob", "ListJobConfig", "ListNotice", "ListTemplates", "RunJob", "ShowFlowGraph", "ShowHistoryDetails", "ShowJobListByProjectId", "ShowJobStatus", "ShowJobSuccessRatio", "ShowLastHistory", "ShowListHistory", "ShowListPeriodHistory", "ShowOutputInfo", "ShowRecordDetail", "ShowRecordInfo", "StopBuildJob", "StopJob", "UpdateBuildJob", "UpdateNotice"]

[lib]
name = "huawei_cloud_api_definitions_CodeArtsBuild"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CodeArtsBuild"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
