[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
CheckParameters = []
CheckRecord = []
CheckRulesetParameters = []
CreateRuleset = []
CreateTask = []
DeleteRuleset = []
DeleteTask = []
ListRules = []
ListRulesets = []
ListTaskParameter = []
ListTaskRuleset = []
ListTemplateRules = []
RunTask = []
SetDefaulTemplate = []
ShowProgressDetail = []
ShowTaskCmetrics = []
ShowTaskDefects = []
ShowTaskDefectsStatistic = []
ShowTaskDetail = []
ShowTaskListByProjectId = []
ShowTaskPathTree = []
ShowTaskSettings = []
ShowTasklog = []
ShowTasksRulesets = []
StopTaskById = []
UpdateDefectStatus = []
UpdateIgnorePath = []
UpdateTaskRuleset = []
UpdateTaskSettings = []
full = ["CheckParameters", "CheckRecord", "CheckRulesetParameters", "CreateRuleset", "CreateTask", "DeleteRuleset", "DeleteTask", "ListRules", "ListRulesets", "ListTaskParameter", "ListTaskRuleset", "ListTemplateRules", "RunTask", "SetDefaulTemplate", "ShowProgressDetail", "ShowTaskCmetrics", "ShowTaskDefects", "ShowTaskDefectsStatistic", "ShowTaskDetail", "ShowTaskListByProjectId", "ShowTasklog", "ShowTaskPathTree", "ShowTaskSettings", "ShowTasksRulesets", "StopTaskById", "UpdateDefectStatus", "UpdateIgnorePath", "UpdateTaskRuleset", "UpdateTaskSettings"]

[lib]
name = "huawei_cloud_api_definitions_CodeArtsCheck"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CodeArtsCheck"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
