[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
CreateApp = []
CreateDeployTaskByTemplate = []
CreateDeploymentGroup = []
CreateDeploymentHost = []
CreateEnvironment = []
CreateHost = []
CreateHostCluster = []
DeleteApplication = []
DeleteDeployTask = []
DeleteDeploymentGroup = []
DeleteDeploymentHost = []
DeleteEnvironment = []
DeleteHostFromEnvironment = []
ImportHostToEnvironment = []
ListAllApp = []
ListDeployTaskHistoryByDate = []
ListDeployTasks = []
ListEnvironments = []
ListHostClusters = []
ListHostGroups = []
ListHosts = []
ListNewHosts = []
ListTaskSuccessRate = []
ShowAppDetailById = []
ShowDeployTaskDetail = []
ShowDeploymentGroupDetail = []
ShowDeploymentHostDetail = []
ShowEnvironmentDetail = []
ShowExecutionParams = []
ShowHostClusterDetail = []
ShowHostDetail = []
ShowProjectSuccessRate = []
StartDeployTask = []
UpdateDeploymentGroup = []
UpdateDeploymentHost = []
full = ["CreateApp", "CreateDeploymentGroup", "CreateDeploymentHost", "CreateDeployTaskByTemplate", "CreateEnvironment", "CreateHost", "CreateHostCluster", "DeleteApplication", "DeleteDeploymentGroup", "DeleteDeploymentHost", "DeleteDeployTask", "DeleteEnvironment", "DeleteHostFromEnvironment", "ImportHostToEnvironment", "ListAllApp", "ListDeployTaskHistoryByDate", "ListDeployTasks", "ListEnvironments", "ListHostClusters", "ListHostGroups", "ListHosts", "ListNewHosts", "ListTaskSuccessRate", "ShowAppDetailById", "ShowDeploymentGroupDetail", "ShowDeploymentHostDetail", "ShowDeployTaskDetail", "ShowEnvironmentDetail", "ShowExecutionParams", "ShowHostClusterDetail", "ShowHostDetail", "ShowProjectSuccessRate", "StartDeployTask", "UpdateDeploymentGroup", "UpdateDeploymentHost"]

[lib]
name = "huawei_cloud_api_definitions_CodeArtsDeploy"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-CodeArtsDeploy"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "0.1.0"
