[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
CancelShareConnections = []
ChangeSqlLimitSwitchStatus = []
ChangeSqlSwitch = []
ChangeTransactionSwitchStatus = []
CreateShareConnections = []
CreateSpaceAnalysisTask = []
CreateSqlLimitRules = []
CreateTuning = []
DeleteDbUser = []
DeleteProcess = []
DeleteSqlLimitRules = []
ExportSlowQueryLogs = []
ExportSlowSqlStatistics = []
ExportSlowSqlTemplatesDetails = []
ExportSlowSqlTrendDetails = []
ExportSqlStatements = []
ExportTopRiskInstances = []
ExportTopSqlTemplatesDetails = []
ExportTopSqlTrendDetails = []
ListApiVersions = []
ListDbUsers = []
ListInnodbLocks = []
ListMetadataLocks = []
ListProcesses = []
ListSpaceAnalysis = []
ListSqlLimitRules = []
ListTransactions = []
ParseSqlLimitRules = []
RegisterDbUser = []
ShowApiVersion = []
ShowDbUser = []
ShowQuotas = []
ShowSqlExecutionPlan = []
ShowSqlExplain = []
ShowSqlLimitJobInfo = []
ShowSqlLimitSwitchStatus = []
ShowSqlSwitchStatus = []
ShowTransactionSwitchStatus = []
ShowTuning = []
UpdateDbUser = []
UpdateSqlLimitRules = []
full = ["CancelShareConnections", "ChangeSqlLimitSwitchStatus", "ChangeSqlSwitch", "ChangeTransactionSwitchStatus", "CreateShareConnections", "CreateSpaceAnalysisTask", "CreateSqlLimitRules", "CreateTuning", "DeleteDbUser", "DeleteProcess", "DeleteSqlLimitRules", "ExportSlowQueryLogs", "ExportSlowSqlStatistics", "ExportSlowSqlTemplatesDetails", "ExportSlowSqlTrendDetails", "ExportSqlStatements", "ExportTopRiskInstances", "ExportTopSqlTemplatesDetails", "ExportTopSqlTrendDetails", "ListApiVersions", "ListDbUsers", "ListInnodbLocks", "ListMetadataLocks", "ListProcesses", "ListSpaceAnalysis", "ListSqlLimitRules", "ListTransactions", "ParseSqlLimitRules", "RegisterDbUser", "ShowApiVersion", "ShowDbUser", "ShowQuotas", "ShowSqlExecutionPlan", "ShowSqlExplain", "ShowSqlLimitJobInfo", "ShowSqlLimitSwitchStatus", "ShowSqlSwitchStatus", "ShowTransactionSwitchStatus", "ShowTuning", "UpdateDbUser", "UpdateSqlLimitRules"]

[lib]
name = "huawei_cloud_api_definitions_DAS"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-DAS"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
