[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
AddAuditAgent = []
AddAuditDatabase = []
AddRdsDatabase = []
AddRdsNoAgentDatabase = []
BatchAddResourceTag = []
BatchDeleteResourceTag = []
CountResourceInstanceByTag = []
CreateInstancesPeriodOrder = []
DeleteAuditAgent = []
DeleteAuditDatabase = []
DeleteInstances = []
DownloadAuditAgent = []
ListAuditAgent = []
ListAuditAlarmLog = []
ListAuditDatabases = []
ListAuditInstanceJobs = []
ListAuditInstances = []
ListAuditOperateLogs = []
ListAuditRuleRisks = []
ListAuditRuleScopes = []
ListAuditSensitiveMasks = []
ListAuditSqls = []
ListAuditSummaryInfos = []
ListAvailabilityZoneInfos = []
ListEcsSpecification = []
ListProjectResourceTags = []
ListRdsDatabases = []
ListResourceInstanceByTag = []
ListSqlInjectionRules = []
RebootAuditInstance = []
ShowAuditQuota = []
ShowAuditRuleRisk = []
StartAuditInstance = []
StopAuditInstance = []
SwitchAgent = []
SwitchAuditDatabase = []
SwitchRiskRule = []
UpdateAuditInstance = []
UpdateAuditSecurityGroup = []
full = ["AddAuditAgent", "AddAuditDatabase", "AddRdsDatabase", "AddRdsNoAgentDatabase", "BatchAddResourceTag", "BatchDeleteResourceTag", "CountResourceInstanceByTag", "CreateInstancesPeriodOrder", "DeleteAuditAgent", "DeleteAuditDatabase", "DeleteInstances", "DownloadAuditAgent", "ListAuditAgent", "ListAuditAlarmLog", "ListAuditDatabases", "ListAuditInstanceJobs", "ListAuditInstances", "ListAuditOperateLogs", "ListAuditRuleRisks", "ListAuditRuleScopes", "ListAuditSensitiveMasks", "ListAuditSqls", "ListAuditSummaryInfos", "ListAvailabilityZoneInfos", "ListEcsSpecification", "ListProjectResourceTags", "ListRdsDatabases", "ListResourceInstanceByTag", "ListSqlInjectionRules", "RebootAuditInstance", "ShowAuditQuota", "ShowAuditRuleRisk", "StartAuditInstance", "StopAuditInstance", "SwitchAgent", "SwitchAuditDatabase", "SwitchRiskRule", "UpdateAuditInstance", "UpdateAuditSecurityGroup"]

[lib]
name = "huawei_cloud_api_definitions_DBSS"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-DBSS"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
