[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
BatchCreateResourceTags = []
CreateHostedDirectConnect = []
CreateResourceTag = []
CreateVifPeer = []
CreateVirtualGateway = []
CreateVirtualInterface = []
DeleteDirectConnect = []
DeleteHostedDirectConnect = []
DeleteResourceTag = []
DeleteVifPeer = []
DeleteVirtualGateway = []
DeleteVirtualInterface = []
ListDirectConnects = []
ListHostedDirectConnects = []
ListProjectTags = []
ListSwitchoverTestRecords = []
ListTagResourceInstances = []
ListVirtualGateways = []
ListVirtualInterfaces = []
ShowDirectConnect = []
ShowHostedDirectConnect = []
ShowQuotas = []
ShowResourceTag = []
ShowVirtualGateway = []
ShowVirtualInterface = []
SwitchoverTest = []
UpdateDirectConnect = []
UpdateHostedDirectConnect = []
UpdateVifPeer = []
UpdateVirtualGateway = []
UpdateVirtualInterface = []
full = ["BatchCreateResourceTags", "CreateHostedDirectConnect", "CreateResourceTag", "CreateVifPeer", "CreateVirtualGateway", "CreateVirtualInterface", "DeleteDirectConnect", "DeleteHostedDirectConnect", "DeleteResourceTag", "DeleteVifPeer", "DeleteVirtualGateway", "DeleteVirtualInterface", "ListDirectConnects", "ListHostedDirectConnects", "ListProjectTags", "ListSwitchoverTestRecords", "ListTagResourceInstances", "ListVirtualGateways", "ListVirtualInterfaces", "ShowDirectConnect", "ShowHostedDirectConnect", "ShowQuotas", "ShowResourceTag", "ShowVirtualGateway", "ShowVirtualInterface", "SwitchoverTest", "UpdateDirectConnect", "UpdateHostedDirectConnect", "UpdateVifPeer", "UpdateVirtualGateway", "UpdateVirtualInterface"]

[lib]
name = "huawei_cloud_api_definitions_DC"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-DC"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
