[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
CreateDatabase = []
CreateGroup = []
CreateInstance = []
CreateUsers = []
DeleteDatabase = []
DeleteInstance = []
DeleteUser = []
ExecuteKillLogicalProcesses = []
ExecuteKillPhysicalProcesses = []
ExpandInstanceNodes = []
ListAvailableRdsList = []
ListDatabases = []
ListEngines = []
ListFlavors = []
ListGroup = []
ListInstances = []
ListNodes = []
ListReadWriteRatio = []
ListSlowLog = []
ListUsers = []
RebuildConfig = []
ResetAdministrator = []
ResetUserPassword = []
ResizeFlavor = []
RestartInstance = []
ShowDatabase = []
ShowInstance = []
ShowInstanceParam = []
ShowLogicalProcesses = []
ShowNode = []
ShowPhysicalProcesses = []
ShowProcessesAuditLog = []
ShrinkInstanceNodes = []
UpdateDatabaseInfo = []
UpdateInstanceName = []
UpdateInstanceParam = []
UpdateInstanceSecurityGroup = []
UpdateReadAndWriteStrategy = []
UpdateUser = []
ValidateWeakPassword = []
full = ["CreateDatabase", "CreateGroup", "CreateInstance", "CreateUsers", "DeleteDatabase", "DeleteInstance", "DeleteUser", "ExecuteKillLogicalProcesses", "ExecuteKillPhysicalProcesses", "ExpandInstanceNodes", "ListAvailableRdsList", "ListDatabases", "ListEngines", "ListFlavors", "ListGroup", "ListInstances", "ListNodes", "ListReadWriteRatio", "ListSlowLog", "ListUsers", "RebuildConfig", "ResetAdministrator", "ResetUserPassword", "ResizeFlavor", "RestartInstance", "ShowDatabase", "ShowInstance", "ShowInstanceParam", "ShowLogicalProcesses", "ShowNode", "ShowPhysicalProcesses", "ShowProcessesAuditLog", "ShrinkInstanceNodes", "UpdateDatabaseInfo", "UpdateInstanceName", "UpdateInstanceParam", "UpdateInstanceSecurityGroup", "UpdateReadAndWriteStrategy", "UpdateUser", "ValidateWeakPassword"]

[lib]
name = "huawei_cloud_api_definitions_DDM"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-DDM"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
