[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
BatchCreateTags = []
BatchDeleteTags = []
BatchStartTransferTask = []
BatchStopTransferTask = []
CommitCheckpoint = []
ConsumeRecords = []
CreateApp = []
CreateCloudTableTransferTask = []
CreateDliTransferTask = []
CreateDwsTransferTask = []
CreateMrsTransferTask = []
CreateObsTransferTask = []
CreatePolicies = []
CreateStream = []
CreateTag = []
DeleteApp = []
DeleteCheckpoint = []
DeleteStream = []
DeleteTag = []
DeleteTransferTask = []
ListApp = []
ListPolicies = []
ListResourcesByTags = []
ListStreams = []
ListTags = []
ListTransferTasks = []
SendRecords = []
ShowApp = []
ShowCheckpoint = []
ShowConsumerState = []
ShowCursor = []
ShowPartitionMetrics = []
ShowStream = []
ShowStreamMetrics = []
ShowStreamTags = []
ShowTransferTask = []
UpdatePartitionCount = []
UpdateStream = []
full = ["BatchCreateTags", "BatchDeleteTags", "BatchStartTransferTask", "BatchStopTransferTask", "CommitCheckpoint", "ConsumeRecords", "CreateApp", "CreateCloudTableTransferTask", "CreateDliTransferTask", "CreateDwsTransferTask", "CreateMrsTransferTask", "CreateObsTransferTask", "CreatePolicies", "CreateStream", "CreateTag", "DeleteApp", "DeleteCheckpoint", "DeleteStream", "DeleteTag", "DeleteTransferTask", "ListApp", "ListPolicies", "ListResourcesByTags", "ListStreams", "ListTags", "ListTransferTasks", "SendRecords", "ShowApp", "ShowCheckpoint", "ShowConsumerState", "ShowCursor", "ShowPartitionMetrics", "ShowStream", "ShowStreamMetrics", "ShowStreamTags", "ShowTransferTask", "UpdatePartitionCount", "UpdateStream"]

[lib]
name = "huawei_cloud_api_definitions_DIS"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-DIS"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "0.1.1"
