[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
AddBuckets = []
AddRule = []
AddRuleGroup = []
AddScanJob = []
BatchAddDataMask = []
ChangeDbTemplateOperation = []
ChangeRule = []
CreateDatabaseWaterMark = []
CreateDocWatermark = []
CreateDocWatermarkByAddress = []
CreateImageWatermark = []
CreateImageWatermarkByAddress = []
CreateProductOrder = []
DeleteBucket = []
DeleteRule = []
DeleteRuleGroup = []
ListBuckets = []
ListDbMaskTask = []
ListRelationBuckets = []
ListRelationColumn = []
ListRelationDb = []
ListRelationFile = []
ListRelationTable = []
ListRuleGroups = []
ShowDatabaseWaterMark = []
ShowDocWatermark = []
ShowDocWatermarkByAddress = []
ShowImageWatermark = []
ShowImageWatermarkByAddress = []
ShowImageWatermarkWithImage = []
ShowImageWatermarkWithImageByAddress = []
ShowOpenApiCalledRecords = []
ShowRules = []
ShowScanJobResults = []
ShowScanJobs = []
ShowSpecification = []
ShowTopics = []
UpdateAssetName = []
UpdateDefaultTopic = []
full = ["AddBuckets", "AddRule", "AddRuleGroup", "AddScanJob", "BatchAddDataMask", "ChangeDbTemplateOperation", "ChangeRule", "CreateDatabaseWaterMark", "CreateDocWatermark", "CreateDocWatermarkByAddress", "CreateImageWatermark", "CreateImageWatermarkByAddress", "CreateProductOrder", "DeleteBucket", "DeleteRule", "DeleteRuleGroup", "ListBuckets", "ListDbMaskTask", "ListRelationBuckets", "ListRelationColumn", "ListRelationDb", "ListRelationFile", "ListRelationTable", "ListRuleGroups", "ShowDatabaseWaterMark", "ShowDocWatermark", "ShowDocWatermarkByAddress", "ShowImageWatermark", "ShowImageWatermarkByAddress", "ShowImageWatermarkWithImage", "ShowImageWatermarkWithImageByAddress", "ShowOpenApiCalledRecords", "ShowRules", "ShowScanJobResults", "ShowScanJobs", "ShowSpecification", "ShowTopics", "UpdateAssetName", "UpdateDefaultTopic"]

[lib]
name = "huawei_cloud_api_definitions_DSC"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-DSC"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "0.1.1"
