[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
AcceptServiceContract = []
AsyncInvokeApiStartWorkflow = []
CheckWorkflowAuthentication = []
CreateCollection = []
CreateIndex = []
CreateMyActionTemplate = []
CreateStore = []
CreateWorkflow = []
CreateWorkflowAuthentication = []
DeleteCollection = []
DeleteEntities = []
DeleteIndex = []
DeleteMyActionTemplate = []
DeleteStore = []
DeleteWorkflow = []
DescribeCollection = []
DescribeIndex = []
DescribeJob = []
DescribeStore = []
GetProgress = []
HybridSearch = []
InsertEntities = []
ListCollections = []
ListJobs = []
ListMyActionTemplate = []
ListStores = []
ListSystemTemplates = []
ListWorkflowInstance = []
ListWorkflows = []
LoadCollection = []
QueryEntities = []
ReleaseCollection = []
RestoreWorkflowExecution = []
SearchEntities = []
ShowPublicActionList = []
ShowPublicTemplateInfo = []
ShowServiceContract = []
ShowSystemTemplateDetail = []
ShowThirdTemplateInfo = []
ShowWorkflowInfo = []
ShowWorkflowInstance = []
UpdateMyActionTemplate = []
UpdateMyActionTemplateToDeprecated = []
UpdateWorkflow = []
UpsertEntities = []
full = ["AcceptServiceContract", "AsyncInvokeApiStartWorkflow", "CheckWorkflowAuthentication", "CreateCollection", "CreateIndex", "CreateMyActionTemplate", "CreateStore", "CreateWorkflow", "CreateWorkflowAuthentication", "DeleteCollection", "DeleteEntities", "DeleteIndex", "DeleteMyActionTemplate", "DeleteStore", "DeleteWorkflow", "DescribeCollection", "DescribeIndex", "DescribeJob", "DescribeStore", "GetProgress", "HybridSearch", "InsertEntities", "ListCollections", "ListJobs", "ListMyActionTemplate", "ListStores", "ListSystemTemplates", "ListWorkflowInstance", "ListWorkflows", "LoadCollection", "QueryEntities", "ReleaseCollection", "RestoreWorkflowExecution", "SearchEntities", "ShowPublicActionList", "ShowPublicTemplateInfo", "ShowServiceContract", "ShowSystemTemplateDetail", "ShowThirdTemplateInfo", "ShowWorkflowInfo", "ShowWorkflowInstance", "UpdateMyActionTemplate", "UpdateMyActionTemplateToDeprecated", "UpdateWorkflow", "UpsertEntities"]

[lib]
name = "huawei_cloud_api_definitions_DWR"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-DWR"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
