[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
BatchSaveAuth = []
CreateAndUpdateExportConfig = []
CreateAndUpdatePermission = []
CreateDataConnection = []
CreateUserTag = []
CreateWorkspace = []
DeleteDataConnectionByConnectionId = []
DeleteRule = []
DeleteUserTag = []
DeleteWorkspace = []
ExportResourcePackage = []
ImportResourcePackage = []
ListAuthProperties = []
ListAuthed = []
ListCubeAndCatalogList = []
ListDataConnection = []
ListInstances = []
ListPermission = []
ListPermissionConfig = []
ListResources = []
ListUserTagHead = []
ListUserTagValue = []
ListWorkspaces = []
SaveDatasetForOpenApi = []
SaveOrUpdateAuthProperties = []
SaveUserTagValue = []
ShowDataConnectionByConnectionId = []
ShowDatasetDetail = []
ShowImportResourceTaskDetail = []
UpdateDataConnection = []
UpdatePermissionConfig = []
UpdateUserTag = []
UpdateWorkspace = []
full = ["BatchSaveAuth", "CreateAndUpdateExportConfig", "CreateAndUpdatePermission", "CreateDataConnection", "CreateUserTag", "CreateWorkspace", "DeleteDataConnectionByConnectionId", "DeleteRule", "DeleteUserTag", "DeleteWorkspace", "ExportResourcePackage", "ImportResourcePackage", "ListAuthed", "ListAuthProperties", "ListCubeAndCatalogList", "ListDataConnection", "ListInstances", "ListPermission", "ListPermissionConfig", "ListResources", "ListUserTagHead", "ListUserTagValue", "ListWorkspaces", "SaveDatasetForOpenApi", "SaveOrUpdateAuthProperties", "SaveUserTagValue", "ShowDataConnectionByConnectionId", "ShowDatasetDetail", "ShowImportResourceTaskDetail", "UpdateDataConnection", "UpdatePermissionConfig", "UpdateUserTag", "UpdateWorkspace"]

[lib]
name = "huawei_cloud_api_definitions_DataArtsInsight"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-DataArtsInsight"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "CHANGE_ME"
