[dependencies.chrono]
features = ["serde"]
version = "0"

[dependencies.regress]
version = "0"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.typify]
version = "0"

[features]
CheckRepositoryDuplicateName = []
ConfirmDeploymentJob = []
CreateDeploymentJobs = []
CreateTemplateViewHistories = []
DeleteApplicationV4 = []
DownloadApplicationCode = []
ListApplicationsV6 = []
ListPipelineTemplates = []
ListProjectsV4 = []
ListTemplateViewHistories = []
ListTemplates = []
RunCodehubTemplateJob = []
RunDevstarTemplateJob = []
ShowApplicationDependentResources = []
ShowApplicationReleaseRepositories = []
ShowApplicationResDeleteStatus = []
ShowApplicationV3 = []
ShowDeploymentJobs = []
ShowJobDetail = []
ShowPipelineLastStatusV2 = []
ShowRepositoryByCloudIde = []
ShowRepositoryStatisticalDataV2 = []
ShowTemplateFile = []
ShowTemplateV3 = []
StartPipeline = []
UpdateApplication = []
full = ["CheckRepositoryDuplicateName", "ConfirmDeploymentJob", "CreateDeploymentJobs", "CreateTemplateViewHistories", "DeleteApplicationV4", "DownloadApplicationCode", "ListApplicationsV6", "ListPipelineTemplates", "ListProjectsV4", "ListTemplates", "ListTemplateViewHistories", "RunCodehubTemplateJob", "RunDevstarTemplateJob", "ShowApplicationDependentResources", "ShowApplicationReleaseRepositories", "ShowApplicationResDeleteStatus", "ShowApplicationV3", "ShowDeploymentJobs", "ShowJobDetail", "ShowPipelineLastStatusV2", "ShowRepositoryByCloudIde", "ShowRepositoryStatisticalDataV2", "ShowTemplateFile", "ShowTemplateV3", "StartPipeline", "UpdateApplication"]

[lib]
name = "huawei_cloud_api_definitions_DevStar"
path = "src/lib.rs"

[package]
authors = ["mingyang91 <mingyang91@qq.com>"]
description = "Huawei Cloud API definitions, generated from OpenAPI spec"
edition = "2021"
license = "MIT"
name = "huawei-cloud-api-definitions-DevStar"
repository = "https://github.com/mingyang91/huawei-cloud-api-definitions"
version = "0.1.1"
